# bstk-root-patcher

./: README.md
src/: CMakeLists.txt  main.cpp
src/fs_utils/: fs_utils.cpp  fs_utils.hpp
src/log_utils/: log_utils.hpp  сonsole_ui.hpp
src/parsers/: bstk_conf_parser.cpp  bstk_conf_parser.hpp
src/scanner/: scanner.cpp  scanner.hpp
